--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<!--
-Hey Louis I told you this needed work don' look in here!
-I'm recording you with Hotjar so I know what you're up too :P
--->
 <!DOCTYPE html>
 <html lang="en">
     <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ciaran Hanrahan, designer &amp; developer</title>
-    <meta name="keywords" content="ux, ui, web, design, mobile, concept, experience, interface, interaction, visual, developer, ciaran, hanrahan,">
-    <meta name="description" content="User experience, interface design &amp; frontend development">
+    <title>Ciaran Hanrahan, UI designer &amp; developer</title>
+    <meta name="keywords" content="ux, ui, web, design, mobile, concept, experience, interface, interaction, visual, developer, ciaran hanrahan,">
+    <meta name="description" content="Ciaran Hanrahan - UI designer &amp; developer creating beautiful digital products with a focus on simplicity &amp; thoughtful product experiences.">
     <meta name="author" content="Ciaran Hanrahan">
     <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet">
@@ -28,53 +24,21 @@ I'm recording you with Hotjar so I know what you're up too :P
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
  <script type="text/javascript" src="jribbble.js"></script>
   </head>
-
-
   <body id="home">
     <div class="navbar">
       <div class="container">
         <div class="navbar-header">
-          <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button> -->
           <a class="navbar-brand" href="/">Ciarán Hanrahan</a>
         </div>
-        <!-- <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-           <li role="presentation" class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-                All Projects <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="headfort-school"></a></li>
-                <li><a href="tour-america">Tour America</a></li>
-                <li><a href="brown-thomas">Brown Thomas</a></li>
-                <li><a href="peacockgreen">PeacockGreen</a></li>
-                <li><a href="garyb">GaryB Wheelchair Accessories</a></li>
-                <li><a href="scoil-chaitriona">Scoil Chaitriona</a></li>
-                <li><a href="menupages-livebook">Menupages Livebook</a></li>
-                <li><a href="menupages">Menupages Print</a></li>
-                <li><a href="ken-curran">Ken Curran</a></li>
-                <li><a href="disney">Disney</a></li>
-              </ul>
-            </li>
-            <li><a href="http://emmacarberry.tumblr.com/" target="_blank">Journal</a></li>
-            <li><a href="#footer" class="smoothScroll">Contact</a></li>
-          </ul>
-        </div> -->
       </div>
     </div>
 
-    <img class="hero-background-image" src="img/hero-illustration.svg">
+  <img class="hero-background-image" src="img/hero-illustration.svg">
 
-  <!-- +++++ Welcome Section +++++ -->
   <section class="about-me">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <!--<img src="https://s3-eu-west-1.amazonaws.com/emma-portfolio/user.png" alt="Stanley">-->
           <p>
             I'm a UI designer &amp; developer from Dublin, Ireland.<br>
             I've been designing and building digital products for over 5 years. 
