--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       
         <h1>Ciarán Hanrahan</h1>
-        <h2>UX &amo; UI Designer</h2>
+        <h2>UX &amp; UI Designer</h2>
       
     </div>
   </div>
