--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         
         <h3 class="pink">About</h3>
         <p>
-          I've been designing and building digital products for over 5 years for clients in tech &amp; ecommerce.<br>
-          I'm passionate about simplicity and creating thoughtful product experiences.
+          I've a multidisciplinary designer and I've been designing and building digital products for over 5 years for clients in tech &amp; ecommerce.<br>
+          I'm passionate about simplicity and creating thoughtful, purpose-driven experiences with design &amp; code.
         </p>
         <hr>          
         <h3 class="pink">Present</h3>
         <p>
-          Designer at <a href="http://Visible.vc" target="_blank">Visible</a> <small class="grey"> (startup)</small> creating a product to give companies the power to tell their story with the help of data.
+          I'm currently a Product Designer at <a href="http://Visible.vc" target="_blank">Visible</a> <small class="grey"> (startup)</small> creating a product to give companies the power to tell their story with the help of data.
         </p>
         <p>
           Partner at <a href="http://considereddesign.co" target="_blank">Considered Design</a> <small class="grey"> (agency)</small> helping small and medium size businesses launch digital products through branding, UX &amp; web development.
@@ -55,8 +55,9 @@
         <hr>          
         <h3 class="pink">Past</h3>
         <p>
-          UX Designer at <a href="http://evercam.io" target="_blank">Evercam</a><small class="grey"> (startup)</small><br>
-          Designer &amp; Developer at <a href="http://whitemope.com" target="_blank">White Mope</a><small class="grey"> (agency)</small>
+          UI Designer (contract) for <a href="http://evercam.io" target="_blank">Skurt</a><small class="grey">(Startup - US)</small><br>
+          UI Developer at <a href="http://evercam.io" target="_blank">Evercam</a><small class="grey"> (Startup - Ireland)</small><br>
+          Designer &amp; Developer at <a href="http://whitemope.com" target="_blank">White Mope</a><small class="grey"> (Agency - Australia)</small>
         </p>
         <hr>          
         <h3 class="pink">Connect</h3>
