--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <hr>          
         <h3 class="pink">Past</h3>
         <p>
-          UI Designer (contract) for <a href="http://evercam.io" target="_blank">Skurt</a><small class="grey">(Startup - US)</small><br>
+          UI Designer (contract) for <a href="http://skurt.com" target="_blank">Skurt</a><small class="grey">(Startup - US)</small><br>
           UI Developer at <a href="http://evercam.io" target="_blank">Evercam</a><small class="grey"> (Startup - Ireland)</small><br>
           Designer &amp; Developer at <a href="http://whitemope.com" target="_blank">White Mope</a><small class="grey"> (Agency - Australia)</small>
         </p>
