--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       
         <h1>Ciarán Hanrahan</h1>
-        <h2>UX &amp; UI Designer</h2>
+        <h2>Product Designer</h2>
       
     </div>
   </div>
@@ -55,9 +55,9 @@
         <hr>          
         <h3 class="pink">Past</h3>
         <p>
-          UI Designer (contract) for <a href="http://skurt.com" target="_blank">Skurt</a><small class="grey">(Startup - US)</small><br>
-          UI Developer at <a href="http://evercam.io" target="_blank">Evercam</a><small class="grey"> (Startup - Ireland)</small><br>
-          Designer &amp; Developer at <a href="http://whitemope.com" target="_blank">White Mope</a><small class="grey"> (Agency - Australia)</small>
+          UI Designer <small>(contract)</small> for <a href="http://skurt.com" target="_blank">Skurt</a><small class="grey">  (Startup - US)</small><br>
+          UI Developer at <a href="http://evercam.io" target="_blank">Evercam</a><small class="grey">  (Startup - Ireland)</small><br>
+          Designer &amp; Developer at <a href="http://whitemope.com" target="_blank">White Mope</a><small class="grey">  (Agency - Australia)</small>
         </p>
         <hr>          
         <h3 class="pink">Connect</h3>
