--- a/index.html
+++ b/index.html
@@ -44,10 +44,23 @@
           I've a multidisciplinary designer and I've been designing and building digital products for over 5 years for clients in tech &amp; ecommerce.<br>
           I'm passionate about simplicity and creating thoughtful, purpose-driven experiences with design &amp; code.
         </p>
-        <br>
-        <p class="sm-grey">
-          I'm in the process of redesigning my portfolio in order to provide case studies and insights into how I work. In the mean time, you can see some of my work on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a> or better yet, visit <a href="http://Visible.vc" target="_blank">Visible.vc</a> - I designed the marketing site and the app (if you want to <a href="https://app.visible.vc/create-account" target="_blank">sign up</a> to check it out, it's a pretty seamless sign up flow :)
-        </p>
+        
+        <hr>
+        <h3 class="pink">My Work</h3>
+           <p>
+          I'm in the process of redesigning my portfolio in order to provide case studies and insights into how I work. In the mean time:
+        </p> 
+          <ul>
+            <li>
+               <a href="https://paper.dropbox.com/doc/Visible.cv-0xVAb8tr7QpBsCi23Et6Y" target="_blank">Read a write</a> up I've done to highlight some of the major aspects of the Visible product I've been responsible for designing and shipping 
+            </li>
+            <li>
+            View a select few projects on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>
+            </li>
+            <li>
+              Or visit <a href="http://Visible.vc" target="_blank">Visible.vc</a> - I designed the marketing site and the app (feel free to <a href="https://app.visible.vc/create-account" target="_blank">sign up</a> and check it out :)
+            </li>
+          </ul>
         <hr>          
         <h3 class="pink">Present</h3>
         <p>
