--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         <h3 class="pink">About</h3>
         <p>
-          I've a multidisciplinary designer and I've been designing and building digital products for over 5 years for clients in tech &amp; ecommerce.<br>
+          I'm a multidisciplinary designer and I've been designing and building digital products for over 5 years for clients in tech &amp; ecommerce.<br>
           I'm passionate about simplicity and creating thoughtful, purpose-driven experiences with design &amp; code.
         </p>
 
