--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
         <h3 class="pink">About</h3>
         <p>
-          I'm a multidisciplinary designer working Dublin, Ireland. I've been designing and building digital products for over 5 years helping businesses and startups rething, prototype and design products and brands from a range of industries.<br>
+          I'm a multidisciplinary designer working in Dublin, Ireland. I've been designing and building digital products for over 5 years, helping businesses and startups rethink, prototype and design products and brands from a range of industries.<br>
         </p>
 
         <hr>
