--- a/index.html
+++ b/index.html
@@ -44,9 +44,16 @@
 
         <h3 class="pink">About</h3>
         <p>
-          With a background in design, development and business, I've a rare ability to ideate, design and launch elegant product solutions that deliver measured results.
+          I've a background in design, development & marketing, giving me a rare ability to ideate, design and launch elegant product solutions that deliver measured results.
           <br><br>
           I've helped to launch and grow successful startups and worked with well known companies to deliver solutions to complex scenarios, always with a focus on putting the customer first.
+        </p>
+
+        <hr>
+
+        <h3 class="pink">Now</h3>
+        <p>
+            I'm currently working on my portfolio. If you want to see what I'm working on now and my latest projects <a href="https://portfolio.ciaran.design/fbd4c663805b4989a1cbd0fea1d0b3fc?v=999e001371fd463b927fc9312dfca1c4" target="_blank"> you can view them  here</a>.
         </p>
 
         <hr>
@@ -94,12 +101,6 @@
         </div>
         <br><br>
         <p class="grey"><small>You can see some work in progress and some UI work on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>.</small></p>
-        <hr>
-
-        <h3 class="pink">Current</h3>
-        <p>
-          Currently open to new work for work. <a href="mailto:justciaranhanrahan@gmail.com">Get in touch</a><br>
-        </p>
         <hr>
         <h3 class="pink">Past</h3>
         <p>
