--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <h3 class="pink">Now</h3>
         <p>
-            I'm currently working on my portfolio. If you want to see what I'm working on now and my latest projects <a href="https://portfolio.ciaran.design/fbd4c663805b4989a1cbd0fea1d0b3fc?v=999e001371fd463b927fc9312dfca1c4" target="_blank"> you can view them  here</a>.
+            I'm redesigning my portfolio. If you want to see my latest projects <a href="https://portfolio.ciaran.design/projects" target="_blank"> view them here</a>.
         </p>
 
         <hr>
