--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ciaran Hanrahan, UI designer &amp; developer</title>
-  <meta name="keywords" content="ux, ui, web, design, mobile, concept, experience, interface, interaction, visual, developer, ciaran hanrahan,">
-  <meta name="description" content="Ciaran Hanrahan - UI designer &amp; developer creating beautiful digital products with a focus on simplicity &amp; thoughtful product experiences.">
+  <title>Ciaran Hanrahan, Product Designer, UX & UI</title>
+  <meta name="keywords" content="ux, ui, web, design, mobile, experience, interface, interaction, visual, developer, ciaran hanrahan,">
+  <meta name="description" content="Ciaran Hanrahan - Product designer creating beautiful digital products with a focus on simplicity &amp; thoughtful product experiences.">
   <meta name="author" content="Ciaran Hanrahan">
   <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="css/main.css" rel="stylesheet">
@@ -74,7 +74,7 @@
                     Jun 2015 - July 2019
                   </span>
 
-                  <a class="featured-work-link" href="https://www.notion.so/Helping-3000-companies-across-6-continents-to-engage-their-investors-through-regular-professional-u-fd1e6c2d98084ab1add59b507c5d55c5" target="_blank">
+                  <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
                     View Case Study →
                   </a>
                 </div>
@@ -91,7 +91,7 @@
                     March 2017
                   </span>
 
-                  <a class="featured-work-link" href="https://www.notion.so/Designing-a-Vehicle-Fleet-Management-App-98bbee7a2fe74ca5a6e49b781dd861fb" target="_blank">
+                  <a class="featured-work-link" href="https://portfolio.ciaran.design/skurt" target="_blank">
                     View Case Study →
                   </a>
                 </div>
