--- a/index.html
+++ b/index.html
@@ -35,15 +35,12 @@
     </div>
   </div>
 
-<!-- <img class="hero-background-image" src="img/hero-illustration.svg"> -->
-
 <section class="about-me">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-
-        <h3 class="pink">About</h3>
         <p>
+          <b>Hi, I'm Ciarán - a product designer from Dublin, Ireland.</b><br><br>
           I've a background in design, development & marketing, giving me a rare ability to ideate, design and launch elegant product solutions that deliver measured results.
           <br><br>
           I've helped to launch and grow successful startups and worked with well known companies to deliver solutions to complex scenarios, always with a focus on putting the customer first.
@@ -51,19 +48,53 @@
 
         <hr>
 
-        <h3 class="pink">Now</h3>
-        <p>
-            I'm redesigning my portfolio. If you want to see my latest projects <a href="https://portfolio.ciaran.design/projects" target="_blank"> view them here</a>.
-        </p>
-
-        <hr>
-
         <div class="row">
           <div class="col-lg-10">
-            <h3 class="pink">Featured Work</h3>
+            <h3>Featured Work</h3>
 
             <div class="featured-works">
-              <div class="featured-work">
+              <div class="featured-work bg-green">
+                <h2 class="featured-work-title"><a href="http://editmode.com" target="_blank">EditMode</a></h2>
+                <p class="featured-work-desc">
+                  Taking the pain out of content editing on website and web apps.
+                </p>
+
+                <div class="featured-work-footer">
+                  <span class="featured-work-time">
+                    May 2020 - Contract
+                  </span>
+
+                  <a class="featured-work-link" href="https://portfolio.ciaran.design/editmode" target="_blank">
+                    View Project →
+                  </a>
+                </div>
+              </div>
+
+              <div class="featured-work bg-pink">
+                <h2 class="featured-work-title">
+                  Revise
+                </h2>
+                <p class="featured-work-desc">
+                  A platform for students to revise, attend classes and take exams online.
+                </p>
+
+                <div class="featured-work-footer">
+                  <span class="featured-work-time">
+                    May 2020 - Contract
+                  </span>
+
+                  <a class="featured-work-link" href="https://portfolio.ciaran.design/skurt" target="_blank">
+                    View Project →
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-10">
+            <div class="featured-works">
+              <div class="featured-work bg-blue">
                 <h2 class="featured-work-title"><a href="http://Visible.vc" target="_blank">Visible.vc</a></h2>
                 <p class="featured-work-desc">
                   Helping 3000 companies engage their investors through professional updates.
@@ -71,16 +102,16 @@
 
                 <div class="featured-work-footer">
                   <span class="featured-work-time">
-                    Jun 2015 - July 2019
+                    June 2015 to July 2019 - Fulltime
                   </span>
 
                   <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
-                    View Case Study →
+                    View Project →
                   </a>
                 </div>
               </div>
 
-              <div class="featured-work">
+              <div class="featured-work bg-yellow">
                 <h2 class="featured-work-title"><a href="http://fair.com" target="_blank">Fair</a></h2>
                 <p class="featured-work-desc">
                   Designing an application for managing a fleet of vehicles.
@@ -88,11 +119,11 @@
 
                 <div class="featured-work-footer">
                   <span class="featured-work-time">
-                    March 2017
+                    March 2017 - Contract
                   </span>
 
                   <a class="featured-work-link" href="https://portfolio.ciaran.design/skurt" target="_blank">
-                    View Case Study →
+                    View Project →
                   </a>
                 </div>
               </div>
@@ -102,15 +133,7 @@
         <br><br>
         <p class="grey"><small>You can see some work in progress and some UI work on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>.</small></p>
         <hr>
-        <h3 class="pink">Past</h3>
-        <p>
-          Product Designer at <a href="http://Visible.vc" target="_blank">Visible</a> <small class="grey">(Startup, US)</small><br>
-          Product Designer <small>(contract)</small> for <a href="http://fair.com" target="_blank">Fair</a><small class="grey">  (Startup, US)</small><br>
-          UI Developer at Evercam<small class="grey">  (Startup, Ireland)</small><br>
-          Designer &amp; Developer at <a href="http://www.daverennick.com/" target="_blank">Spectraland</a><small class="grey">  (Agency, Australia)</small>
-        </p>
-        <hr>
-        <h3 class="pink">Connect</h3>
+        <h3>Connect</h3>
         <p>
           <small>
             <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a><br>
