add images to projects

--- a/index.html
+++ b/index.html
@@ -60,32 +60,32 @@
                 </p>
 
                 <div class="featured-work-footer">
-                  <span class="featured-work-time">
-                    May 2020 - Contract
-                  </span>
-
                   <a class="featured-work-link" href="https://portfolio.ciaran.design/editmode" target="_blank">
                     View Project →
                   </a>
+                </div>
+
+                <div class="featured-work-img">
+                  <img src="img/editmode.png"/>
                 </div>
               </div>
 
               <div class="featured-work bg-pink">
                 <h2 class="featured-work-title">
-                  Revise
+                  iRevise
                 </h2>
                 <p class="featured-work-desc">
                   A platform for students to revise, attend classes and take exams online.
                 </p>
 
                 <div class="featured-work-footer">
-                  <span class="featured-work-time">
-                    May 2020 - Contract
-                  </span>
-
                   <a class="featured-work-link" href="https://portfolio.ciaran.design/skurt" target="_blank">
                     View Project →
                   </a>
+                </div>
+
+                <div class="featured-work-img">
+                  <img src="img/irevise.png"/>
                 </div>
               </div>
             </div>
@@ -101,14 +101,15 @@
                 </p>
 
                 <div class="featured-work-footer">
-                  <span class="featured-work-time">
-                    June 2015 to July 2019 - Fulltime
-                  </span>
-
                   <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
                     View Project →
                   </a>
                 </div>
+
+                <div class="featured-work-img">
+                  <img src="img/visible.png"/>
+                </div>
+
               </div>
 
               <div class="featured-work bg-yellow">
@@ -118,20 +119,20 @@
                 </p>
 
                 <div class="featured-work-footer">
-                  <span class="featured-work-time">
-                    March 2017 - Contract
-                  </span>
-
                   <a class="featured-work-link" href="https://portfolio.ciaran.design/skurt" target="_blank">
                     View Project →
                   </a>
+                </div>
+
+                <div class="featured-work-img">
+                  <img src="img/skurt.png"/>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <br><br>
-        <p class="grey"><small>You can see some work in progress and some UI work on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>.</small></p>
+        <p class="grey"><small>You can see works in progress and more UI focussed work on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>.</small></p>
         <hr>
         <h3>Connect</h3>
         <p>
