--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 </p>
 
                 <div class="featured-work-footer">
-                  <a class="featured-work-link" href="https://portfolio.ciaran.design/skurt" target="_blank">
-                    View Project →
+                  <a class="featured-work-link" href="" target="_blank">
+                    Coming soon
                   </a>
                 </div>
 
