--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="featured-work-img">
-                  <img src="img/editmode.png"/>
+                  <img src="img/EditMode.png"/>
                 </div>
               </div>
 
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="featured-work-img">
-                  <img src="img/irevise.png"/>
+                  <img src="img/iRevise.png"/>
                 </div>
               </div>
             </div>
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="featured-work-img">
-                  <img src="img/visible.png"/>
+                  <img src="img/Visible.png"/>
                 </div>
 
               </div>
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="featured-work-img">
-                  <img src="img/skurt.png"/>
+                  <img src="img/Skurt.png"/>
                 </div>
               </div>
             </div>
