--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h3>Featured Work</h3>
 
             <div class="featured-works">
-              <div class="featured-work bg-green">
+              <div class="featured-work bg-yellow">
                 <h2 class="featured-work-title"><a href="http://editmode.com" target="_blank">EditMode</a></h2>
                 <p class="featured-work-desc">
                   Taking the pain out of content editing on website and web apps.
@@ -94,8 +94,10 @@
         <div class="row">
           <div class="col-lg-10">
             <div class="featured-works">
-              <div class="featured-work bg-blue">
-                <h2 class="featured-work-title"><a href="http://Visible.vc" target="_blank">Visible.vc</a></h2>
+              <div class="featured-work bg-grey">
+                <h2 class="featured-work-title">
+                  <a href="http://Visible.vc" target="_blank">Visible.vc</a>
+                </h2>
                 <p class="featured-work-desc">
                   Helping 3000 companies engage their investors through professional updates.
                 </p>
@@ -112,8 +114,39 @@
 
               </div>
 
-              <div class="featured-work bg-yellow">
-                <h2 class="featured-work-title"><a href="http://fair.com" target="_blank">Fair</a></h2>
+              <div class="featured-work bg-blue">
+                <h2 class="featured-work-title">
+                  HouseBuild
+                </h2>
+                <p class="featured-work-desc">
+                   A new marketplace to connecting home owners and professionals
+                </p>
+
+                <div class="featured-work-footer">
+                  <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
+                    Coming soon
+                  </a>
+                </div>
+
+                <div class="featured-work-img">
+                  <img src="img/HouseBuild.png"/>
+                </div>
+
+              </div>
+
+
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-10">
+            <div class="featured-works">
+              
+
+              <div class="featured-work bg-green">
+                <h2 class="featured-work-title">
+                  <a href="http://fair.com" target="_blank">Fair</a>
+                </h2>
                 <p class="featured-work-desc">
                   Designing an application for managing a fleet of vehicles.
                 </p>
@@ -126,6 +159,23 @@
 
                 <div class="featured-work-img">
                   <img src="img/Skurt.png"/>
+                </div>
+              </div>
+
+              <div class="featured-work bg-yellow">
+                <h2 class="featured-work-title">The Currency</h2>
+                <p class="featured-work-desc">
+                  A brand new news site offering insightful, dynamic commentary and investigations.
+                </p>
+
+                <div class="featured-work-footer">
+                  <a class="featured-work-link" href="">
+                    Coming soon
+                  </a>
+                </div>
+
+                <div class="featured-work-img">
+                  <img src="img/TheCurrency.png"/>
                 </div>
               </div>
             </div>
