--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   HouseBuild
                 </h2>
                 <p class="featured-work-desc">
-                   A new marketplace to connecting home owners and professionals
+                   A new marketplace for connecting home owners and professionals.
                 </p>
 
                 <div class="featured-work-footer">
