--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="row">
           <div class="col-lg-10">
             <div class="featured-works">
-              
+
 
               <div class="featured-work bg-green">
                 <h2 class="featured-work-title">
@@ -182,7 +182,9 @@
           </div>
         </div>
         <br><br>
-        <p class="grey"><small>You can see works in progress and more UI focussed work on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>.</small></p>
+        <p class="grey">You can see works in progress and more UI focussed work on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>.</p>
+
+        <p class="grey">Learn about <a href="https://portfolio.ciaran.design/my-process" target="_blank">my design process</a>.</p>
         <hr>
         <h3>Connect</h3>
         <p>
