--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
           </div>
         </div>
         <br><br>
-        <p class="grey">You can see works in progress and more UI focussed work on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>.</p>
-
-        <p class="grey">Learn about <a href="https://portfolio.ciaran.design/my-process" target="_blank">my design process</a>.</p>
+        <p class="grey">
+          You can check out work in progress &amp; on my <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>.
+          Learn about <a href="https://portfolio.ciaran.design/my-process" target="_blank">my design process</a> in this Notion doc or read about what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>.</p>
         <hr>
         <h3>Connect</h3>
         <p>
