--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="col-lg-12">
         <p>
           <b>Hi, I'm Ciarán - a product designer from Dublin, Ireland.</b><br><br>
-          I've a background in design, development & marketing, giving me a rare ability to ideate, design and launch elegant product solutions that deliver measured results.
+          I've a background in design &amp; development, giving me a rare ability to ideate, design and launch elegant product solutions that deliver measured results.
           <br><br>
           I've helped to launch and grow successful startups and worked with well known companies to deliver solutions to complex scenarios, always with a focus on putting the customer first.
         </p>
@@ -56,7 +56,7 @@
               <div class="featured-work bg-yellow">
                 <h2 class="featured-work-title"><a href="http://editmode.com" target="_blank">EditMode</a></h2>
                 <p class="featured-work-desc">
-                  Taking the pain out of content editing on website and web apps.
+                  Taking the pain out of content editing on websites and web apps.
                 </p>
 
                 <div class="featured-work-footer">
@@ -181,10 +181,12 @@
             </div>
           </div>
         </div>
-        <br><br>
+        <hr>
+        <h3>How I Work</h3>
         <p class="grey">
-          You can check out work in progress &amp; on my <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>.
-          Learn about <a href="https://portfolio.ciaran.design/my-process" target="_blank">my design process</a> in this Notion doc or read about what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>.</p>
+          See some work in progress on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>,
+          read about <a href="https://portfolio.ciaran.design/my-process" target="_blank">my design process</a>,
+          see what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>, or check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the tools I use</a> in my workflow.</p>
         <hr>
         <h3>Connect</h3>
         <p>
