--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="keywords" content="ux, ui, web, design, mobile, experience, interface, interaction, visual, developer, ciaran hanrahan,">
   <meta name="description" content="Ciaran Hanrahan - Product designer creating beautiful digital products with a focus on simplicity &amp; thoughtful product experiences.">
   <meta name="author" content="Ciaran Hanrahan">
-  <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
   <link href="css/main.css" rel="stylesheet">
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -19,131 +18,114 @@
     ga('create', 'UA-54809709-1', 'auto');
     ga('send', 'pageview');
   </script>
-  <!-- <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> -->
-  <!-- <script type="text/javascript" src="jribbble.js"></script> -->
 </head>
 <body id="home">
   <div class="navbar">
     <div class="container">
 
-        <div class="profiler-container">
-          <img src="img/me.png" class="profiler">
-        </div>
-        <h1>Ciarán Hanrahan</h1>
-        <h2>Product Designer</h2>
+      <div class="profiler-container">
+        <img src="img/me.png" class="profiler">
+      </div>
+      <h1>Ciarán Hanrahan</h1>
+      <h2>Product Designer</h2>
 
     </div>
   </div>
 
-<section class="about-me">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <p>
-          <b>Hi, I'm Ciarán - a product designer from Dublin, Ireland.</b><br><br>
-          I've a background in design &amp; development, giving me a rare ability to ideate, design and launch elegant product solutions that deliver measured results.
-          <br><br>
-          I've helped to launch and grow successful startups and worked with well known companies to deliver solutions to complex scenarios, always with a focus on putting the customer first.
-        </p>
+  <section class="about-me">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <p>
+            <b>Hi, I'm Ciarán - a product designer from Dublin, Ireland.</b><br><br>
+            I've a background in design &amp; development, giving me a rare ability to ideate, design and launch elegant product solutions that deliver measured results.
+            <br><br>
+            I've helped to launch and grow successful startups and worked with well known companies to deliver solutions to complex scenarios, always with a focus on putting the customer first.
+          </p>
 
-        <hr>
+          <hr>
+          <h3>Featured Work</h3>
 
-        <div class="row">
-          <div class="col-lg-10">
-            <h3>Featured Work</h3>
+          <div class="featured-works">
+            <div class="featured-work bg-yellow">
+              <h2 class="featured-work-title"><a href="http://editmode.com" target="_blank">EditMode</a></h2>
+              <p class="featured-work-desc">
+                Taking the pain out of content editing on websites and web apps.
+              </p>
 
-            <div class="featured-works">
-              <div class="featured-work bg-yellow">
-                <h2 class="featured-work-title"><a href="http://editmode.com" target="_blank">EditMode</a></h2>
-                <p class="featured-work-desc">
-                  Taking the pain out of content editing on websites and web apps.
-                </p>
-
-                <div class="featured-work-footer">
-                  <a class="featured-work-link" href="https://portfolio.ciaran.design/editmode" target="_blank">
-                    View Project →
-                  </a>
-                </div>
-
-                <div class="featured-work-img">
-                  <img src="img/EditMode.png"/>
-                </div>
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/editmode" target="_blank">
+                  View Project →
+                </a>
               </div>
 
-              <div class="featured-work bg-pink">
-                <h2 class="featured-work-title">
-                  iRevise
-                </h2>
-                <p class="featured-work-desc">
-                  A platform for students to revise, attend classes and take exams online.
-                </p>
-
-                <div class="featured-work-footer">
-                  <a class="featured-work-link" href="" target="_blank">
-                    Coming soon
-                  </a>
-                </div>
-
-                <div class="featured-work-img">
-                  <img src="img/iRevise.png"/>
-                </div>
+              <div class="featured-work-img">
+                <img src="img/EditMode.png"/>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-10">
-            <div class="featured-works">
-              <div class="featured-work bg-grey">
-                <h2 class="featured-work-title">
-                  <a href="http://Visible.vc" target="_blank">Visible.vc</a>
-                </h2>
-                <p class="featured-work-desc">
-                  Helping 3000 companies engage their investors through professional updates.
-                </p>
 
-                <div class="featured-work-footer">
-                  <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
-                    View Project →
-                  </a>
-                </div>
+            <div class="featured-work bg-pink">
+              <h2 class="featured-work-title">
+                iRevise
+              </h2>
+              <p class="featured-work-desc">
+                A platform for students to revise, attend classes and take exams online.
+              </p>
 
-                <div class="featured-work-img">
-                  <img src="img/Visible.png"/>
-                </div>
-
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="" target="_blank">
+                  Coming soon
+                </a>
               </div>
 
-              <div class="featured-work bg-blue">
-                <h2 class="featured-work-title">
-                  HouseBuild
-                </h2>
-                <p class="featured-work-desc">
-                   A new marketplace for connecting home owners and professionals.
-                </p>
+              <div class="featured-work-img">
+                <img src="img/iRevise.png"/>
+              </div>
+            </div>
 
-                <div class="featured-work-footer">
-                  <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
-                    Coming soon
-                  </a>
-                </div>
+            <div class="featured-work bg-grey">
+              <h2 class="featured-work-title">
+                <a href="http://Visible.vc" target="_blank">Visible.vc</a>
+              </h2>
+              <p class="featured-work-desc">
+                Helping 3000 companies engage their investors through professional updates.
+              </p>
 
-                <div class="featured-work-img">
-                  <img src="img/HouseBuild.png"/>
-                </div>
-
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
+                  View Project →
+                </a>
               </div>
 
+              <div class="featured-work-img">
+                <img src="img/Visible.png"/>
+              </div>
 
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-10">
-            <div class="featured-works">
+
+            <div class="featured-work bg-blue">
+              <h2 class="featured-work-title">
+                HouseBuild
+              </h2>
+              <p class="featured-work-desc">
+                 A new marketplace for connecting home owners and professionals.
+              </p>
+
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
+                  Coming soon
+                </a>
+              </div>
+
+              <div class="featured-work-img">
+                <img src="img/HouseBuild.png"/>
+              </div>
+
+            </div>
 
 
-              <div class="featured-work bg-green">
+            <div class="featured-work bg-green">
+              <div class="featured-work-content">
                 <h2 class="featured-work-title">
                   <a href="http://fair.com" target="_blank">Fair</a>
                 </h2>
@@ -156,78 +138,53 @@
                     View Project →
                   </a>
                 </div>
-
-                <div class="featured-work-img">
-                  <img src="img/Skurt.png"/>
-                </div>
               </div>
 
-              <div class="featured-work bg-yellow">
-                <h2 class="featured-work-title">The Currency</h2>
-                <p class="featured-work-desc">
-                  A brand new news site offering insightful, dynamic commentary and investigations.
-                </p>
-
-                <div class="featured-work-footer">
-                  <a class="featured-work-link" href="">
-                    Coming soon
-                  </a>
-                </div>
-
-                <div class="featured-work-img">
-                  <img src="img/TheCurrency.png"/>
-                </div>
+              <div class="featured-work-img">
+                <img src="img/Skurt.png"/>
               </div>
             </div>
+
+            <div class="featured-work bg-yellow">
+              <h2 class="featured-work-title">The Currency</h2>
+              <p class="featured-work-desc">
+                A brand new news site offering insightful, dynamic commentary and investigations.
+              </p>
+
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="">
+                  Coming soon
+                </a>
+              </div>
+
+              <div class="featured-work-img">
+                <img src="img/TheCurrency.png"/>
+              </div>
+            </div>
+
           </div>
+
+          <hr>
+          <h3>How I Work</h3>
+          <p class="grey">
+            See work in progress on <a href="https://dribbble.com/Ciaran" target="_blank">dribbble</a>,
+            read about <a href="https://portfolio.ciaran.design/my-process" target="_blank">my design process</a>,
+            see what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>, or check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the tools I use</a> in my workflow.</p>
+          <hr>
+          <h3>Connect</h3>
+          <p>
+            <small>
+              <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a><br>
+              <a href="https://github.com/Jaibles" target="_blank">Github</a><br>
+              <a href="https://twitter.com/CiaranHan" target="_blank">Twitter</a><br>
+              <br>
+              <a href="https://portfolio.ciaran.design/consultations" target="_blank">Book a Consultation →</a><br>
+              <a href="mailto:justciaranhanrahan@gmail.com">justciaranhanrahan@gmail.com</a><br>
+            </small>
+          </p>
         </div>
-        <hr>
-        <h3>How I Work</h3>
-        <p class="grey">
-          See some work in progress on <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a>,
-          read about <a href="https://portfolio.ciaran.design/my-process" target="_blank">my design process</a>,
-          see what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>, or check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the tools I use</a> in my workflow.</p>
-        <hr>
-        <h3>Connect</h3>
-        <p>
-          <small>
-            <a href="https://dribbble.com/Ciaran" target="_blank">Dribbble</a><br>
-            <a href="https://github.com/Jaibles" target="_blank">Github</a><br>
-            <a href="https://twitter.com/CiaranHan" target="_blank">Twitter</a><br><br>
-            <a href="mailto:justciaranhanrahan@gmail.com">justciaranhanrahan@gmail.com</a><br>
-          </small>
-        </p>
       </div>
     </div>
-  </div>
-</section>
-<!-- <script type="text/javascript">
-  $.jribbble.setToken('afb7d4d1b7a3f059b15557e85b7e984443b616b85cc4cbaa9f32436b6cd1ec64');
-
-  $.jribbble.users('CiaranHanrahan').then(function(user) {
-  var html = [];
-
-  html.push('<a class="user-link rounded" href="' + user.html_url + '" target="_blank">');
-  html.push('<img class="avatar avatar--large" src="' + user.avatar_url + '"></a>');
-  html.push('<h3><strong>' + user.name + '</strong></h3>');
-  html.push('<p>' + user.bio + '<p/>');
-  //html.push('<p>' + user.bio + ' from ' + user.location + '<p/>');
-
-  $('.profile').html(html.join(''));
-  });
-
-  $.jribbble.users('CiaranHanrahan').shots({per_page: 36}).then(function(shots) {
-  var html = [];
-
-  shots.forEach(function(shot) {
-  html.push('<div class="col-sm-6">');
-  html.push('<a href="' + shot.html_url + '" target="_blank">');
-  html.push('<img src="' + shot.images.normal + '">');
-  html.push('</a></div>');
-  });
-
-  $('.shots').html(html.join(''));
-  });
-</script> -->
+  </section>
 </body>
 </html>
