--- a/index.html
+++ b/index.html
@@ -186,5 +186,8 @@
       </div>
     </div>
   </section>
+  <link href="//static.cushionapp.com/availability.css" rel="stylesheet">
+  <script src="//static.cushionapp.com/availability.js"
+  data-user="d8366194-2722-4f3e-85db-81513e1ba0e9"></script>
 </body>
 </html>
