--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             I've helped to launch and grow successful startups and worked with well known companies to deliver solutions to complex scenarios, always with a focus on putting the customer first.
           </p>
 
+            <link href="//static.cushionapp.com/availability.css" rel="stylesheet">
+  <script src="//static.cushionapp.com/availability.js"
+  data-user="d8366194-2722-4f3e-85db-81513e1ba0e9"></script>
+<p>I'm currently <span data-availability-badge></span>.</p>
+
           <hr>
           <h3>Featured Work</h3>
 
@@ -186,8 +191,5 @@
       </div>
     </div>
   </section>
-  <link href="//static.cushionapp.com/availability.css" rel="stylesheet">
-  <script src="//static.cushionapp.com/availability.js"
-  data-user="d8366194-2722-4f3e-85db-81513e1ba0e9"></script>
 </body>
 </html>
