--- a/index.html
+++ b/index.html
@@ -44,14 +44,50 @@
           </p>
 
             <link href="//static.cushionapp.com/availability.css" rel="stylesheet">
-  <script src="//static.cushionapp.com/availability.js"
-  data-user="d8366194-2722-4f3e-85db-81513e1ba0e9"></script>
-<p>I'm currently <span data-availability-badge></span>.</p>
+            <script src="//static.cushionapp.com/availability.js"
+            data-user="d8366194-2722-4f3e-85db-81513e1ba0e9"></script>
+          <p>I'm currently <span data-availability-badge></span> for new projects.</p>
 
           <hr>
           <h3>Featured Work</h3>
 
           <div class="featured-works">
+            <div class="featured-work bg-yellow">
+              <h2 class="featured-work-title"><a href="http://clubzap.com" target="_blank">ClubZap</a></h2>
+              <p class="featured-work-desc">
+                Helping sports clubs manage events, payments and administration.
+              </p>
+
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="https://clubzap.invisionapp.com/overview/ClubZap-Redesign-ckd5zd09n040u016eye6eyuju/screens" target="_blank">
+                  work in progres
+                </a>
+              </div>
+
+              <div class="featured-work-img">
+                <img src="img/clubzap.png"/>
+              </div>
+            </div>
+
+            <div class="featured-work bg-pink">
+              <h2 class="featured-work-title">
+                TokyoMate
+              </h2>
+              <p class="featured-work-desc">
+                A landing page for an assistant and physical mail address to make life easier for expats in Japan.
+              </p>
+
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="https://tokyomate.invisionapp.com/overview/Tokyomate-ckdr48ru201kh014ef2v58r40/screens" target="_blank">
+                  work in progres
+                </a>
+              </div>
+
+              <div class="featured-work-img">
+                <img src="img/tokyomate.png"/>
+              </div>
+            </div>
+
             <div class="featured-work bg-yellow">
               <h2 class="featured-work-title"><a href="http://editmode.com" target="_blank">EditMode</a></h2>
               <p class="featured-work-desc">
@@ -71,20 +107,20 @@
 
             <div class="featured-work bg-pink">
               <h2 class="featured-work-title">
-                iRevise
+                BookSync
               </h2>
               <p class="featured-work-desc">
-                A platform for students to revise, attend classes and take exams online.
+                A landing page and app to motivate teams to read, learn and share the experience together.
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="" target="_blank">
-                  Coming soon
+                <a class="featured-work-link" href="https://booksync.invisionapp.com/overview/Booksync-cke2u3z1e2q5k016ombz4o5tb/screens" target="_blank">
+                  work in progress
                 </a>
               </div>
 
               <div class="featured-work-img">
-                <img src="img/iRevise.png"/>
+                <img src="img/booksync.png"/>
               </div>
             </div>
 
@@ -117,8 +153,8 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
-                  Coming soon
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/housebuild" target="_blank">
+                  View Project →
                 </a>
               </div>
 
@@ -158,12 +194,30 @@
 
               <div class="featured-work-footer">
                 <a class="featured-work-link" href="">
-                  Coming soon
                 </a>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/TheCurrency.png"/>
+              </div>
+            </div>
+
+            <div class="featured-work bg-pink">
+              <h2 class="featured-work-title">
+                iRevise
+              </h2>
+              <p class="featured-work-desc">
+                A platform for students to revise, attend classes and take exams online.
+              </p>
+
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/irevise" target="_blank">
+                  View Project →
+                </a>
+              </div>
+
+              <div class="featured-work-img">
+                <img src="img/iRevise.png"/>
               </div>
             </div>
 
