--- a/index.html
+++ b/index.html
@@ -221,6 +221,25 @@
               </div>
             </div>
 
+            <div class="featured-work bg-pink">
+              <h2 class="featured-work-title">
+                <a href="https://talentacquisition.ie/" target="_blank">TalentAqcuisition.ie</a>
+              </h2>
+              <p class="featured-work-desc">
+                Landing page for a remote service offering scaling businesses access to a dedicated Talent Acquisition team.
+              </p>
+
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="https://talentacquisition.ie" target="_blank">
+                  View Project →
+                </a>
+              </div>
+
+              <div class="featured-work-img">
+                <img src="img/talentacquisition.png"/>
+              </div>
+            </div>
+
           </div>
 
           <hr>
