imrpove image size

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 
             <div class="featured-work bg-pink">
               <h2 class="featured-work-title">
-                TokyoMate
+                TokyoMate Assistant
               </h2>
               <p class="featured-work-desc">
-                A landing page for an assistant and physical mail address to make life easier for expats in Japan.
+                A landing page & app for an assistant to make life easier for expats in Japan.
               </p>
 
               <div class="featured-work-footer">
