update notion links

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/editmode" target="_blank">
+                <a class="featured-work-link" href="https://www.notion.so/Making-it-easy-to-add-real-time-editing-to-your-site-app-6737914b84e74bf0a2a00918306e7994" target="_blank">
                   View Project →
                 </a>
               </div>
@@ -133,7 +133,7 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
+                <a class="featured-work-link" href="https://www.notion.so/Helping-3000-companies-engage-their-investors-fd1e6c2d98084ab1add59b507c5d55c5" target="_blank">
                   View Project →
                 </a>
               </div>
@@ -153,7 +153,7 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/housebuild" target="_blank">
+                <a class="featured-work-link" href="https://www.notion.so/A-marketplace-for-the-construction-industry-5fb90e7f4a304d45ae5d154dcf1f7797" target="_blank">
                   View Project →
                 </a>
               </div>
@@ -175,7 +175,7 @@
                 </p>
 
                 <div class="featured-work-footer">
-                  <a class="featured-work-link" href="https://portfolio.ciaran.design/skurt" target="_blank">
+                  <a class="featured-work-link" href="https://www.notion.so/A-vehicle-fleet-management-app-for-the-car-rental-industry-98bbee7a2fe74ca5a6e49b781dd861fb" target="_blank">
                     View Project →
                   </a>
                 </div>
@@ -211,7 +211,7 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/irevise" target="_blank">
+                <a class="featured-work-link" href="https://www.notion.so/A-digital-approach-to-secondary-education-cd90a7d9d5c449a3935310be0553d25a" target="_blank">
                   View Project →
                 </a>
               </div>
@@ -246,8 +246,8 @@
           <h3>How I Work</h3>
           <p class="grey">
             See work in progress on <a href="https://dribbble.com/Ciaran" target="_blank">dribbble</a>,
-            read about <a href="https://portfolio.ciaran.design/my-process" target="_blank">my design process</a>,
-            see what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>, or check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the tools I use</a> in my workflow.</p>
+            read about <a href="https://www.notion.so/My-Process-7d370a6658fc4f7d93579bca282deacc" target="_blank">my design process</a>,
+            see what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>, or check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the apps I use</a> in my workflow.</p>
           <hr>
           <h3>Connect</h3>
           <p>
