--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://tokyomate.invisionapp.com/overview/Tokyomate-ckdr48ru201kh014ef2v58r40/screens" target="_blank">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/tokyomate" target="_blank">
                   work in progres
                 </a>
               </div>
@@ -95,7 +95,7 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://www.notion.so/Making-it-easy-to-add-real-time-editing-to-your-site-app-6737914b84e74bf0a2a00918306e7994" target="_blank">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/editmode" target="_blank">
                   View Project →
                 </a>
               </div>
@@ -133,7 +133,7 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://www.notion.so/Helping-3000-companies-engage-their-investors-fd1e6c2d98084ab1add59b507c5d55c5" target="_blank">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
                   View Project →
                 </a>
               </div>
@@ -153,7 +153,7 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://www.notion.so/A-marketplace-for-the-construction-industry-5fb90e7f4a304d45ae5d154dcf1f7797" target="_blank">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/housebuild" target="_blank">
                   View Project →
                 </a>
               </div>
@@ -175,7 +175,7 @@
                 </p>
 
                 <div class="featured-work-footer">
-                  <a class="featured-work-link" href="https://www.notion.so/A-vehicle-fleet-management-app-for-the-car-rental-industry-98bbee7a2fe74ca5a6e49b781dd861fb" target="_blank">
+                  <a class="featured-work-link" href="https://portfolio.ciaran.design/skurt" target="_blank">
                     View Project →
                   </a>
                 </div>
@@ -211,7 +211,7 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://www.notion.so/A-digital-approach-to-secondary-education-cd90a7d9d5c449a3935310be0553d25a" target="_blank">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/irevise" target="_blank">
                   View Project →
                 </a>
               </div>
@@ -231,7 +231,7 @@
 
               <div class="featured-work-footer">
                 <a class="featured-work-link" href="https://talentacquisition.ie" target="_blank">
-                  View Project →
+                  View Site →
                 </a>
               </div>
 
