--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
     ga('send', 'pageview');
   </script>
 </head>
+
 <body id="home">
   <div class="navbar">
     <div class="container">
@@ -28,7 +29,6 @@
       </div>
       <h1>Ciarán Hanrahan</h1>
       <h2>Product Designer</h2>
-
     </div>
   </div>
 
@@ -36,66 +36,6 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>
-            <b>Hi, I'm Ciarán - a product designer from Dublin, Ireland.</b><br><br>
-            I've a background in design &amp; development, giving me a rare ability to ideate, design and launch elegant product solutions that deliver measured results.
-            <br><br>
-            I've helped to launch and grow successful startups and worked with well known companies to deliver solutions to complex scenarios, always with a focus on putting the customer first.
-          </p>
-
-            <link href="//static.cushionapp.com/availability.css" rel="stylesheet">
-            <script src="//static.cushionapp.com/availability.js"
-            data-user="d8366194-2722-4f3e-85db-81513e1ba0e9"></script>
-          <p>I'm currently <span data-availability-badge></span> for new projects.</p>
-
-          <hr>
-
-          <h3>Case Studies</h3>
-
-          <div class="featured-works">
-
-            <div class="featured-work bg-yellow">
-              <h2 class="featured-work-title">
-                <a href="http://Visible.vc" target="_blank">Visible.vc</a>
-              </h2>
-              <p class="featured-work-desc">
-                Helping 3000 companies engage their investors through professional updates.
-              </p>
-
-              <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
-                  View Case Study →
-                </a>
-              </div>
-
-              <div class="featured-work-img">
-                <img src="img/Visible.png"/>
-              </div>
-
-            </div>
-            <div class="featured-work bg-yellow">
-              <h2 class="featured-work-title"><a href="http://editmode.com" target="_blank">EditMode</a></h2>
-              <p class="featured-work-desc">
-                Taking the pain out of content editing on websites and web apps.
-              </p>
-
-              <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/editmode" target="_blank">
-                  View Case Study →
-                </a>
-              </div>
-
-              <div class="featured-work-img">
-                <img src="img/EditMode.png"/>
-              </div>
-            </div>
-
-          </div>
-          <br>
-          <br>
-          <br>
-          <br>
-
           <h3>Projects</h3>
 
           <div class="featured-works">
@@ -108,7 +48,7 @@
 
               <div class="featured-work-footer">
                 <a class="featured-work-link" href="https://portfolio.ciaran.design/clubzap" target="_blank">
-                  View Project →
+                  View project →
                 </a>
               </div>
 
@@ -127,7 +67,7 @@
 
               <div class="featured-work-footer">
                 <a class="featured-work-link" href="https://portfolio.ciaran.design/tokyomate" target="_blank">
-                  View Project →
+                  View project →
                 </a>
               </div>
 
@@ -136,6 +76,22 @@
               </div>
             </div>
 
+            <div class="featured-work bg-yellow">
+              <h2 class="featured-work-title"><a href="http://editmode.com" target="_blank">EditMode</a></h2>
+              <p class="featured-work-desc">
+                Taking the pain out of content editing on websites and web apps.
+              </p>
+
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/editmode" target="_blank">
+                  View Case Study →
+                </a>
+              </div>
+
+              <div class="featured-work-img">
+                <img src="img/EditMode.png"/>
+              </div>
+            </div>
 
             <div class="featured-work bg-pink">
               <h2 class="featured-work-title">
@@ -146,14 +102,34 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link" href="https://portfolio.ciaran.design/booksync" target="_blank">
-                  View Project →
+                <a class="featured-work-link" href="https://booksync.invisionapp.com/overview/Booksync-cke2u3z1e2q5k016ombz4o5tb/screens" target="_blank">
+                  Work in progress - view designs →
                 </a>
               </div>
 
               <div class="featured-work-img">
                 <img src="img/booksync.png"/>
               </div>
+            </div>
+
+            <div class="featured-work bg-grey">
+              <h2 class="featured-work-title">
+                <a href="http://Visible.vc" target="_blank">Visible.vc</a>
+              </h2>
+              <p class="featured-work-desc">
+                Helping 3000 companies engage their investors through professional updates.
+              </p>
+
+              <div class="featured-work-footer">
+                <a class="featured-work-link" href="https://portfolio.ciaran.design/visible" target="_blank">
+                  Read Case Study →
+                </a>
+              </div>
+
+              <div class="featured-work-img">
+                <img src="img/Visible.png"/>
+              </div>
+
             </div>
 
             <div class="featured-work bg-yellow">
@@ -222,8 +198,7 @@
               </p>
 
               <div class="featured-work-footer">
-                <a class="featured-work-link text-gray" href="">
-                  Work in progress
+                <a class="featured-work-link" href="">
                 </a>
               </div>
 
@@ -276,7 +251,7 @@
           <h3>How I Work</h3>
           <p class="grey">
             See work in progress on <a href="https://dribbble.com/Ciaran" target="_blank">dribbble</a>,
-            read about <a href="https://portfolio.ciaran.design/how-i-work" target="_blank">how I work</a>,
+            read about <a href="https://portfolio.ciaran.design/my-process" target="_blank">my design process</a>,
             see what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>, or check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the apps I use</a> in my workflow.</p>
           <hr>
           <h3>Connect</h3>
