--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
 <body id="home">
   <div class="navbar">
     <div class="container">
+      <div class="flexbox">
+        <div class="profile">
+          <div class="profiler-container">
+            <img src="img/me.png" class="profiler">
+          </div>
+          <h1>Ciarán Hanrahan</h1>
+          <h2>Product Designer</h2>
+        </div>
 
-      <div class="profiler-container">
-        <img src="img/me.png" class="profiler">
+        <a class="nav-item" href="https://portfolio.ciaran.design/cv" target="_blank">
+          View CV →
+        </a>
       </div>
-      <h1>Ciarán Hanrahan</h1>
-      <h2>Product Designer</h2>
-
     </div>
   </div>
 
