--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h2>Product Designer</h2>
         </div>
 
-        <a class="nav-item" href="https://portfolio.ciaran.design/cv" target="_blank">
+        <a class="nav-item mobile-hide" href="https://portfolio.ciaran.design/cv" target="_blank">
           View CV →
         </a>
       </div>
@@ -313,7 +313,11 @@
               <a href="https://github.com/Jaibles" target="_blank">Github</a><br>
               <a href="https://twitter.com/CiaranHan" target="_blank">Twitter</a><br>
               <br>
+              <a class="mobile-show" href="https://portfolio.ciaran.design/cv" target="_blank">
+                View CV →
+              </a><br>
               <a href="https://portfolio.ciaran.design/consultations" target="_blank">Book a Consultation →</a><br>
+
               <a href="mailto:justciaranhanrahan@gmail.com">justciaranhanrahan@gmail.com</a><br>
             </small>
           </p>
