--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
             → See work in progress on <a href="https://dribbble.com/Ciaran" target="_blank">dribbble</a>.<br>
             → Read about <a href="https://portfolio.ciaran.design/how-i-work" target="_blank">how I work and my process</a>.<br>
             → See what I'm currently <a href="https://portfolio.ciaran.design/learning" target="_blank">learning</a>.<br>
-            → Check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the apps I use</a> in my workflow.</p>
+            → Check out some of <a href="https://portfolio.ciaran.design/tools" target="_blank">the apps I use</a> in my workflow.</p><br>
+            → Read other people's experience of <a href="https://portfolio.ciaran.design/working-with-me" target="_blank">working with me</a>.
           <hr>
           <h3>Connect</h3>
           <p>
